--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fast-sort": "^3.4.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
