--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
+    "react-merge-refs": "^2.1.1",
     "three": "^0.164.1"
   },
   "devDependencies": {
