--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@radix-ui/react-select": "^2.0.0",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
-"@team-plain/typescript-sdk": "^4.2.3",
+    "@team-plain/typescript-sdk": "^4.2.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
-"react-merge-refs": "^2.1.1",
+    "react-merge-refs": "^2.1.1",
     "three": "^0.164.1",
-    "ua-parser-js": "^1.0.37"
+    "ua-parser-js": "^1.0.37",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
