--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "happytails-next",
+  "name": "website-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,33 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-select": "^2.0.0",
-    "@react-three/drei": "^9.105.6",
-    "@react-three/fiber": "^8.16.3",
-    "@team-plain/typescript-sdk": "^4.2.3",
-    "next": "14.2.3",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
+    "@team-plain/typescript-sdk": "^4.7.0",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.0",
     "react-merge-refs": "^2.1.1",
-    "three": "^0.164.1",
-    "ua-parser-js": "^1.0.37",
-    "zustand": "^4.5.2"
+    "tailwindcss": "^3.4.7",
+    "three": "^0.167.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ua-parser-js": "^0.7.39",
-    "daisyui": "^4.10.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
