--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@team-plain/typescript-sdk": "^4.7.0",
+    "gltfjsx": "^6.5.0",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
