--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "postcss": "^8",
+    "r3f-perf": "^7.2.1",
     "typescript": "^5"
   }
 }
