--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/rapier": "^1.4.0",
     "@team-plain/typescript-sdk": "^4.7.0",
     "gltfjsx": "^6.5.0",
     "next": "^14.2.5",
