--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@team-plain/typescript-sdk": "^4.7.0",
     "gltfjsx": "^6.5.0",
     "next": "^14.2.5",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-merge-refs": "^2.1.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ua-parser-js": "^0.7.39",
