--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@react-three/rapier": "^1.4.0",
     "@team-plain/typescript-sdk": "^4.7.0",
+    "@uiw/codemirror-theme-dracula": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.0",
     "gltfjsx": "^6.5.0",
     "next": "^14.2.5",
-    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-merge-refs": "^2.1.1",
@@ -24,7 +27,6 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/prismjs": "^1.26.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ua-parser-js": "^0.7.39",
