--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uiw/codemirror-theme-dracula": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "gltfjsx": "^6.5.0",
+    "leva": "^0.9.35",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
