--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "^14.2.5",
     "postcss": "^8",
     "r3f-perf": "^7.2.1",
+    "raw-loader": "^4.0.2",
     "typescript": "^5"
   }
 }
