--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/postprocessing": "^2.16.2",
     "@react-three/rapier": "^1.4.0",
     "@team-plain/typescript-sdk": "^4.7.0",
+    "@types/three": "^0.169.0",
     "@uiw/codemirror-theme-dracula": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "gltfjsx": "^6.5.0",
@@ -25,7 +26,7 @@
     "react-dom": "^18",
     "react-merge-refs": "^2.1.1",
     "tailwindcss": "^3.4.7",
-    "three": "^0.167.1"
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/node": "^22",
