--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18",
     "react-merge-refs": "^2.1.1",
     "tailwindcss": "^3.4.7",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "three-custom-shader-material": "^6.0.13"
   },
   "devDependencies": {
     "@types/node": "^22",
