--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@uiw/codemirror-theme-dracula": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "gltfjsx": "^6.5.0",
+    "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "next": "^14.2.5",
     "react": "^18",
