--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "website-next",
+  "name": "ksorensen-portfolio-website",
   "version": "0.1.0",
   "private": true,
+  "description": "Kristopher Sorensen's Portfolio - 3D Web Experiences, Interactive UI, and Creative Development",
+  "author": "Kristopher Sorensen",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
