--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ksorensen-portfolio-website",
+  "name": "rising-moon",
   "version": "0.1.0",
   "private": true,
   "description": "Kristopher Sorensen's Portfolio - 3D Web Experiences, Interactive UI, and Creative Development",
