--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@motionone/utils": "^10.18.0",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.2",
@@ -24,9 +25,12 @@
     "gltfjsx": "^6.5.0",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
+    "motion": "^12.0.6",
     "next": "^14.2.5",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-merge-refs": "^2.1.1",
     "tailwindcss": "^3.4.7",
     "three": "^0.169.0",
